// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regana #analyse analyse should throw error with invalid input 1`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 2`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 3`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 4`] = `"ENOENT: no such file or directory, stat ''"`;

exports[`regana #analyse analyse should throw error with invalid input 5`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 6`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should work with valid input 1`] = `
"{
  \\"start\\": 0,
  \\"end\\": 21,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 21,
    \\"parentScope\\": null,
    \\"file\\": \\"File_0\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_0\\",
  \\"segments\\": {
    \\"VariableDeclaration_1\\": {
      \\"uses\\": [],
      \\"start\\": 1,
      \\"end\\": 21,
      \\"id\\": \\"VariableDeclaration_1\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"testValue\\": \\"VariableDeclaration_1\\"
  }
}"
`;

exports[`regana #analyse analyse should work with valid input 2`] = `
"{
  \\"start\\": 0,
  \\"end\\": 32,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 32,
    \\"parentScope\\": null,
    \\"file\\": \\"File_2\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_2\\",
  \\"segments\\": {
    \\"VariableDeclaration_3\\": {
      \\"uses\\": [],
      \\"start\\": 0,
      \\"end\\": 15,
      \\"id\\": \\"VariableDeclaration_3\\"
    },
    \\"ExportNamedDeclaration_4\\": {
      \\"uses\\": [
        \\"VariableDeclaration_3\\"
      ],
      \\"start\\": 16,
      \\"end\\": 32,
      \\"id\\": \\"ExportNamedDeclaration_4\\"
    }
  },
  \\"exposes\\": {
    \\"test\\": \\"ExportNamedDeclaration_4\\"
  },
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclaration_3\\"
  }
}"
`;
